--- a/BB_API/BB_API.csproj
+++ b/BB_API/BB_API.csproj
@@ -60,6 +60,9 @@
     <Reference Include="EPPlus, Version=4.5.3.2, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
       <HintPath>..\packages\EPPlus.4.5.3.2\lib\net40\EPPlus.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Exchange.WebServices, Version=15.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Exchange.WebServices.2.2\lib\40\Microsoft.Exchange.WebServices.dll</HintPath>
@@ -106,6 +109,9 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="Renci.SshNet, Version=2024.0.0.0, Culture=neutral, PublicKeyToken=1cee9f8bde3db106, processorArchitecture=MSIL">
+      <HintPath>..\packages\SSH.NET.2024.0.0\lib\net462\Renci.SshNet.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -120,7 +126,13 @@
     <Reference Include="System.IO.Packaging, Version=4.0.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IO.Packaging.4.5.0\lib\net46\System.IO.Packaging.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Security" />
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.2\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Cors, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.Cors.5.2.7\lib\net45\System.Web.Cors.dll</HintPath>
     </Reference>
@@ -254,6 +266,7 @@
     <Compile Include="Controllers\HomePageController.cs" />
     <Compile Include="Controllers\HumanResourcesController.cs" />
     <Compile Include="Controllers\LeaseDeskApprovalController.cs" />
+    <Compile Include="Controllers\ProposalXmlController.cs" />
     <Compile Include="Controllers\ShiptoController.cs" />
     <Compile Include="Controllers\MIFRenovationsController.cs" />
     <Compile Include="Controllers\SLAsController.cs" />
@@ -603,7 +616,7 @@
       <DependentUpon>LeaseDesk.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\LD_Contrato.cs">
-      <DependentUpon>LeaseDesk.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\LD_Contrato_Facturacao.cs">
       <DependentUpon>LeaseDesk.tt</DependentUpon>
@@ -717,6 +730,19 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\RequestModels\ServiceQuoteDeleteRequest.cs" />
+    <Compile Include="Models\SetupXML\ConditionPVP.cs" />
+    <Compile Include="Models\SetupXML\OrdersPartners.cs" />
+    <Compile Include="Models\SetupXML\OrdersPartnersList.cs" />
+    <Compile Include="Models\SetupXML\PartnerInfo.cs" />
+    <Compile Include="Models\SetupXML\PartnersAddressesList.cs" />
+    <Compile Include="Models\SetupXML\XML\Addresses.cs" />
+    <Compile Include="Models\SetupXML\XML\AddressesAdd.cs" />
+    <Compile Include="Models\SetupXML\XML\Conditions.cs" />
+    <Compile Include="Models\SetupXML\XML\Contracts.cs" />
+    <Compile Include="Models\SetupXML\XML\Deal.cs" />
+    <Compile Include="Models\SetupXML\XML\Orders.cs" />
+    <Compile Include="Models\SetupXML\XML\Partners.cs" />
+    <Compile Include="Models\SetupXML\XSD.cs" />
     <Compile Include="Models\SLAs\SLA.cs" />
     <Compile Include="Models\SLAs\SLAsFromDB.cs" />
     <Compile Include="Models\SLAs\SLAsProcess.cs" />
@@ -859,6 +885,7 @@
     <Folder Include="Views\Clients\" />
     <Folder Include="Views\DataIntegration\" />
     <Folder Include="Views\HumanResources\" />
+    <Folder Include="Views\ProposalXml\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
