--- a/BB_API/Web.config
+++ b/BB_API/Web.config
@@ -14,6 +14,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="owin:appStartup" value="BB_API.Startup" />
+	<add key="BasedadosConnect" value="Server=KMDBSDEV02.bs.kme.intern;Database=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;" />
 
 
     <add key="ConfiguracaoNegocio" value="c:\DocumentPrinting\Template\ConfiguracaoNegocio.xlsx" />
@@ -121,11 +122,11 @@
 	
 		
   <connectionStrings>
-    <add name="BB_DB_DEVEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-	<add name="BB_DB_DEVEntities1" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-	<add name="BB_DB_DEVEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-	<add name="masterEntities" connectionString="metadata=res://*/Models.PortalUsers.csdl|res://*/Models.PortalUsers.ssdl|res://*/Models.PortalUsers.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=master;User Id=portalkm_webuser;Password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-	<add name="BB_DB_DEV_LeaseDesk" connectionString="metadata=res://*/Models.LeaseDesk.csdl|res://*/Models.LeaseDesk.ssdl|res://*/Models.LeaseDesk.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;user id=portalkm_webuser;password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="BB_DB_DEVEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="BB_DB_DEVEntities1" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="BB_DB_DEVEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="masterEntities" connectionString="metadata=res://*/Models.PortalUsers.csdl|res://*/Models.PortalUsers.ssdl|res://*/Models.PortalUsers.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=master;User Id=portalkm_webuser;Password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="BB_DB_DEV_LeaseDesk" connectionString="metadata=res://*/Models.LeaseDesk.csdl|res://*/Models.LeaseDesk.ssdl|res://*/Models.LeaseDesk.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;user id=portalkm_webuser;password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>		
 		
 				
