implementação do log4net (apenas no ProposalController)

--- a/BB_API/Web.config
+++ b/BB_API/Web.config
@@ -7,8 +7,138 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+	<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
+	<log4net>
+		<root>
+			<level value="ALL" />
+			<appender-ref ref="errorAppender" />
+			<appender-ref ref="AdoNetAppender" />
+		</root>
+		<appender name="errorAppender" type="log4net.Appender.AdoNetAppender">
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="ERROR" />
+				<levelMax value="ERROR" />
+			</filter>
+			<bufferSize value="1" />
+			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+			<connectionStringName value="ADConnectionString" />
+			<commandText value="INSERT INTO [BB_DEV_BPT_BES]..[App_Log] ([Level],[Logger],[Method], [Exception], [Message],[Date], [ProposalId]) VALUES (@log_level, @logger, @method, @exception, @message, @log_date, @proposal_id)" />
+			<parameter>
+				<parameterName value="@log_level" />
+				<dbType value="String" />
+				<size value="50" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%level" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@logger" />
+				<dbType value="String" />
+				<size value="255" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%logger [%M]" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@method" />
+				<dbType value="String" />
+				<size value="50" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%M" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@exception" />
+				<dbType value="String" />
+				<size value="2000" />
+				<layout type="log4net.Layout.ExceptionLayout" />
+			</parameter>
+			<parameter>
+				<parameterName value="@message" />
+				<dbType value="String" />
+				<size value="200000" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%message" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@log_date" />
+				<dbType value="DateTime" />
+				<layout type="log4net.Layout.RawTimeStampLayout" />
+			</parameter>
+			<parameter>
+				<parameterName value="@proposal_id" />
+				<dbType value="Int32" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{proposal_id}" />
+				</layout>
+			</parameter>
+		</appender>
+
+		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="INFO" />
+				<levelMax value="INFO" />
+			</filter>
+			<bufferSize value="1" />
+			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+			<connectionStringName value="ADConnectionString" />
+			<commandText value="INSERT INTO [BB_DEV_BPT_BES]..[App_Log] ([Level],[Logger],[Method], [Exception], [Message],[Date], [ProposalId]) VALUES (@log_level, @logger, @method, @exception, @message, @log_date, @proposal_id)" />
+			<parameter>
+				<parameterName value="@log_level" />
+				<dbType value="String" />
+				<size value="50" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%level" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@logger" />
+				<dbType value="String" />
+				<size value="255" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%logger [%M]" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@method" />
+				<dbType value="String" />
+				<size value="50" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%M" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@exception" />
+				<dbType value="String" />
+				<size value="2000" />
+				<layout type="log4net.Layout.ExceptionLayout" />
+			</parameter>
+			<parameter>
+				<parameterName value="@message" />
+				<dbType value="String" />
+				<size value="200000" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%message" />
+				</layout>
+			</parameter>
+			<parameter>
+				<parameterName value="@log_date" />
+				<dbType value="DateTime" />
+				<layout type="log4net.Layout.RawTimeStampLayout" />
+			</parameter>
+			<parameter>
+				<parameterName value="@proposal_id" />
+				<dbType value="Int32" />
+				<layout type="log4net.Layout.PatternLayout">
+					<conversionPattern value="%property{proposal_id}" />
+				</layout>
+			</parameter>
+		</appender>
+	</log4net>
   <appSettings>
+	<add key="log4net.Internal.Debug" value="true"/>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -45,6 +175,16 @@
     <!--Human Resources -->
 	  <add key="BasedadosConnect" value="Server=KMDBSDEV02.bs.kme.intern;Database=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;" />
   </appSettings>
+	<system.diagnostics>
+		<trace autoflush="true">
+			<listeners>
+				<add
+				  name="textWriterTraceListener"
+				  type="System.Diagnostics.TextWriterTraceListener"
+				  initializeData="log4net.txt" />
+			</listeners>
+		</trace>
+	</system.diagnostics>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
@@ -121,11 +261,14 @@
 	
 		
   <connectionStrings>
-    <add name="BB_DB_DEVEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-	<add name="BB_DB_DEVEntities1" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-	<add name="BB_DB_DEVEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-	<add name="masterEntities" connectionString="metadata=res://*/Models.PortalUsers.csdl|res://*/Models.PortalUsers.ssdl|res://*/Models.PortalUsers.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=master;User Id=portalkm_webuser;Password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-	<add name="BB_DB_DEV_LeaseDesk" connectionString="metadata=res://*/Models.LeaseDesk.csdl|res://*/Models.LeaseDesk.ssdl|res://*/Models.LeaseDesk.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;user id=portalkm_webuser;password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+	  <add name="ADConnectionString"
+		connectionString="data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework"
+		providerName="System.Data.SqlClient" />
+	<add name="BB_DB_DEVEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="BB_DB_DEVEntities1" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="BB_DB_DEVEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="masterEntities" connectionString="metadata=res://*/Models.PortalUsers.csdl|res://*/Models.PortalUsers.ssdl|res://*/Models.PortalUsers.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=master;User Id=portalkm_webuser;Password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="BB_DB_DEV_LeaseDesk" connectionString="metadata=res://*/Models.LeaseDesk.csdl|res://*/Models.LeaseDesk.ssdl|res://*/Models.LeaseDesk.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;user id=portalkm_webuser;password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>		
 		
 				
