--- a/BB_API/Web.config
+++ b/BB_API/Web.config
@@ -147,6 +147,7 @@
 
 
     <add key="ConfiguracaoNegocio" value="c:\DocumentPrinting\Template\ConfiguracaoNegocio.xlsx" />
+    <add key="ConfiguracaoContrato" value="c:\DocumentPrinting\Template\ConfiguracaoContrato.xlsx" />
     <add key="ConfiguracaoNegocioFolder" value="c:\DocumentPrinting\Template\ConfiguracaoNegocio.xlsx" />
 
     <!--CRM Integration Templates-->
