--- a/BB_API/BB_API.csproj
+++ b/BB_API/BB_API.csproj
@@ -286,6 +286,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AspNetRoles.cs">
+      <DependentUpon>PortalUsers.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\AspNetUserRoles_KM.cs">
       <DependentUpon>PortalUsers.tt</DependentUpon>
     </Compile>
