--- a/BB_API/Web.config
+++ b/BB_API/Web.config
@@ -174,7 +174,7 @@
     <add key="HumanResourcesFileLocation" value="c:\DocumentPrinting\HumanResources\" />
 
     <!--Human Resources -->
-	  <add key="BasedadosConnect" value="Server=KMDBSDEV02.bs.kme.intern;Database=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;" />
+	  <add key="BasedadosConnect" value="Server=KMDBSDEV02.bs.kme.intern;Database=BB_DB_PROD_BES;User Id=portalkm_webuser;Password=123456789;" />
   </appSettings>
 	<system.diagnostics>
 		<trace autoflush="true">
@@ -263,13 +263,13 @@
 		
   <connectionStrings>
 	  <add name="ADConnectionString"
-		connectionString="data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework"
+		connectionString="data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DB_PROD_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework"
 		providerName="System.Data.SqlClient" />
-	<add name="BB_DB_DEVEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	<add name="BB_DB_DEVEntities1" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	<add name="BB_DB_DEVEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="BB_DB_DEVEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DB_PROD_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="BB_DB_DEVEntities1" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DB_PROD_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="BB_DB_DEVEntities2" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DB_PROD_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	<add name="masterEntities" connectionString="metadata=res://*/Models.PortalUsers.csdl|res://*/Models.PortalUsers.ssdl|res://*/Models.PortalUsers.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=master;User Id=portalkm_webuser;Password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	<add name="BB_DB_DEV_LeaseDesk" connectionString="metadata=res://*/Models.LeaseDesk.csdl|res://*/Models.LeaseDesk.ssdl|res://*/Models.LeaseDesk.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;user id=portalkm_webuser;password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="BB_DB_DEV_LeaseDesk" connectionString="metadata=res://*/Models.LeaseDesk.csdl|res://*/Models.LeaseDesk.ssdl|res://*/Models.LeaseDesk.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DB_PROD_BES;user id=portalkm_webuser;password=123456789;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>		
 		
 				
