criação de variáveis no webconfig e AppSettingsGet para configurar o XML

--- a/BB_API/Web.config
+++ b/BB_API/Web.config
@@ -172,6 +172,15 @@
 
     <!--Human Resources -->
     <add key="HumanResourcesFileLocation" value="c:\DocumentPrinting\HumanResources\" />
+	  
+	  <!--SAP CONFIG -->
+	  <add key="SAPENVIROMENT_MESCOD" value="BES" /> 
+	  <!--SAP CONFIG QA - EUQCLNT100 -->
+	  <!--SAP CONFIG PRD - EUPCLNT100 -->
+	  <add key="SAPENVIROMENT_RCVPRN" value="EUQCLNT100" />
+	  <!--SAP CONFIG QA - qa
+	  SAP CONFIG PRD - prod-->
+	  <add key="SAPENVIROMENT_SFTP" value="qa" />
 
     <!--Human Resources -->
 	  <add key="BasedadosConnect" value="Server=KMDBSDEV02.bs.kme.intern;Database=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;" />
