--- a/BB_API/Web.config
+++ b/BB_API/Web.config
@@ -272,7 +272,7 @@
 		
   <connectionStrings>
 	  <add name="ADConnectionString"
-		connectionString="data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DB_PROD_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework"
+		connectionString="data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;User Id=portalkm_webuser;Password=123456789;multipleactiveresultsets=True;application name=EntityFramework"
 		providerName="System.Data.SqlClient" />
 	<add name="BB_DB_DEVEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	<add name="BB_DB_DEVEntities1" connectionString="metadata=res://*/Models.DBModels.csdl|res://*/Models.DBModels.ssdl|res://*/Models.DBModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KMDBSDEV02.bs.kme.intern;initial catalog=BB_DEV_BPT_BES;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
