mudanças nas conditions do xml

--- a/BB_API/Web.config
+++ b/BB_API/Web.config
@@ -174,7 +174,7 @@
     <add key="HumanResourcesFileLocation" value="c:\DocumentPrinting\HumanResources\" />
 	  
 	  <!--SAP CONFIG -->
-	  <add key="SAPENVIROMENT_MESCOD" value="BES" /> 
+	  <add key="SAPENVIROMENT_MESCOD" value="EBB" /> 
 	  <!--SAP CONFIG QA - EUQCLNT100 -->
 	  <!--SAP CONFIG PRD - EUPCLNT100 -->
 	  <add key="SAPENVIROMENT_RCVPRN" value="EUQCLNT100" />
